--- a/dogerty-flash-debug-app/src/dogerty/app/skins/ApplicationChromeSkin.mxml
+++ b/dogerty-flash-debug-app/src/dogerty/app/skins/ApplicationChromeSkin.mxml
@@ -48,6 +48,9 @@
          * @playerversion AIR 1.5
          * @productversion Flex 4 
          */
+		
+		[Bindable] protected static var windowRadiusX:int = 5;
+		
         static private const exclusions:Array = ["backgroundRect", "contentGroup", "statusText"];
         
         /**
@@ -83,15 +86,78 @@
     </s:states>
 	
 	<s:Group id="content" top="5" left="5" right="5" bottom="5">
-    <!-- layer 1: background fill -->
-    <!--- Defines the background color of the skin. -->
-	<s:RectangularDropShadow width="100%" height="100%" distance="0" blurX="10" blurY="10" trRadius="10" tlRadius="10" alpha=".7"/>
-    <s:Rect id="backgroundRect" left="0" right="0" top="0" bottom="0" radiusX="10" radiusY="10">
-        <s:fill>
-            <!--- @private -->
-            <s:SolidColor id="backgroundFill" />
-        </s:fill>
-    </s:Rect>
+		<s:RectangularDropShadow width="100%" height="100%" distance="0" blurX="10" blurY="10" trRadius="10" tlRadius="10" alpha=".7"/>
+	    <!-- layer 1: background fill -->
+	    <!--- Defines the background color of the skin. -->
+		<s:Rect id="backgroundRect" left="1" right="1" top="1" bottom="1" radiusX="{windowRadiusX}">
+			<s:fill>
+				<s:SolidColor id="backgroundFill" />
+			</s:fill>
+		</s:Rect>
+		
+		<!-- layer 3: fill lowlight -->
+		<!--- @private -->
+		<s:Rect id="lowlight" left="1" right="1" top="1" bottom="1" radiusX="{windowRadiusX}">
+			<s:fill>
+				<s:LinearGradient rotation="270">
+					<s:GradientEntry color="0x000000" ratio="0.0" alpha="0.0627" />
+					<s:GradientEntry color="0x000000" ratio="0.48" alpha="0.0099" />
+					<s:GradientEntry color="0x000000" ratio="0.48001" alpha="0" />
+				</s:LinearGradient>
+			</s:fill>
+		</s:Rect>
+		
+		<!-- layer 4: fill highlight -->
+		<!--- @private -->
+		<s:Rect id="highlight" left="1" right="1" top="1" bottom="1" radiusX="{windowRadiusX}">
+			<s:fill>
+				<s:LinearGradient rotation="90">
+					<s:GradientEntry color="0xFFFFFF"
+									 ratio="0.0"
+									 alpha="0.833" />
+					<s:GradientEntry color="0xFFFFFF"
+									 ratio="0.48"
+									 alpha="0.0" />
+					<s:GradientEntry color="0xFFFFFF"
+									 ratio="0.48001"
+									 alpha="0.0" />
+				</s:LinearGradient>
+			</s:fill>
+		</s:Rect>
+		
+		<!-- layer 5: highlight stroke (all states except down) -->
+		<!--- @private -->
+		<s:Rect id="highlightStroke" left="1" right="1" top="1" bottom="1" radiusX="{windowRadiusX}" >
+			<s:stroke>
+				<s:LinearGradientStroke rotation="90" weight="1">
+					<s:GradientEntry color="0xFFFFFF" />
+					<s:GradientEntry color="0xD8D8D8" />
+				</s:LinearGradientStroke>
+			</s:stroke>
+		</s:Rect>
+		
+		<!--- @private -->
+		<s:Rect id="hldownstroke2" left="2" right="2" top="2" bottom="2" radiusX="{windowRadiusX}" >
+			<s:stroke>
+				<s:LinearGradientStroke rotation="90" weight="1">
+					<s:GradientEntry color="0x000000" alpha="0.09" ratio="0.0" />
+					<s:GradientEntry color="0x000000" alpha="0.00" ratio="0.0001" />
+				</s:LinearGradientStroke>
+			</s:stroke>
+		</s:Rect>
+		
+		<!-- layer 7: border - put on top of the fill so it doesn't disappear when scale is less than 1 -->
+		<!--- @private -->
+		<s:Rect id="border" left="0" right="0" top="0" bottom="0" width="69" height="20" radiusX="{windowRadiusX}">
+			<s:stroke>
+				<s:LinearGradientStroke rotation="90" weight="1">
+					<s:GradientEntry color="0x000000" 
+									 alpha="0.5625" />
+					<s:GradientEntry color="0x000000" 
+									 alpha="0.75"  />
+				</s:LinearGradientStroke>
+			</s:stroke>
+		</s:Rect>
     <!-- layer 2: content + status bar -->
     <s:Group left="0" right="0" top="0" bottom="0" minHeight="24" minWidth="0" >
         <s:layout>
