--- a/dogerty-flash-debug-app/src/DogertyDebugApp.mxml
+++ b/dogerty-flash-debug-app/src/DogertyDebugApp.mxml
@@ -4,7 +4,7 @@
                        xmlns:mx="library://ns.adobe.com/flex/mx" 
 					   skinClass="dogerty.app.skins.ApplicationChromeSkin"
 					   status="Disconnected"
-                       creationComplete="onCreationComplete(event)" width="800" height="600">
+                       creationComplete="onCreationComplete(event)" width="800" height="600" closing="onClosing(event)" xmlns:components="dogerty.app.components.*">
     <fx:Declarations>
         <!-- Place non-visual elements (e.g., services, value objects) here -->
     </fx:Declarations>
@@ -13,23 +13,34 @@
 	<s:Group id="content" top="5" left="5" right="5" bottom="5">
 	    <s:VGroup width="100%" height="100%" paddingTop="5">
 			<s:HGroup width="100%" verticalAlign="middle" paddingLeft="5" mouseDown="this.nativeApplication.activeWindow.startMove()">
-				<s:Ellipse width="10" height="10">
-					<s:fill>
-						<s:SolidColor color="#11ff66"/>
-					</s:fill>
-					<s:filters>
-						<s:DropShadowFilter distance="0" alpha=".5"/>
-						<s:BevelFilter blurX="10" blurY="10" distance="1" shadowAlpha=".5"/>
-					</s:filters>
-				</s:Ellipse>
+				<components:AppStatusIndicator id="statusIndicator" status="{p_connectionStatus}"/>
 		        <s:RichText fontSize="18" width="100%">
 					<s:content><s:span fontWeight="bold">Dogerty</s:span> Flash Debugger</s:content>
 				</s:RichText>
-				<s:Button width="20" click="this.nativeWindow.minimize()"/>
-				<s:Button width="20" click="if(this.nativeWindow.displayState == NativeWindowDisplayState.MAXIMIZED) this.restore() else this.nativeWindow.maximize()"/>
-				<s:Button width="20" click="this.close()"/>
+				<components:IconButton width="20" click="this.nativeWindow.minimize()" icon="@Embed('./assets/minimize.png')"/>
+				<components:IconButton width="20" click="toogleWindowSize()" icon="@Embed('./assets/maximize.png')"/>
+				<components:IconButton width="20" click="this.close()" chromeColor="#ff0011" icon="@Embed('./assets/close.png')"/>
 			</s:HGroup>
-	        <s:TextArea id="log" width="100%" height="100%"/>
+			<s:HGroup width="100%" height="100%">
+				<s:Panel title="Display Tree" width="100%" height="100%">
+					<mx:Tree width="100%" height="100%" labelField="@title" contentBackgroundColor="#dddddd" contentBackgroundAlpha=".3">
+						<mx:dataProvider>
+							<fx:XML xmlns="">
+								<root title="hola">
+									<child title="hola"/>
+									<child title="hola">
+										<child title="hola"/>
+									</child>
+								</root>
+							</fx:XML>
+						</mx:dataProvider>
+					</mx:Tree>
+				</s:Panel>
+				<s:Panel title="Properties" width="300" height="100%"/>
+			</s:HGroup>
+			<s:Panel title="Console" width="100%" height="100">
+		        <s:TextArea id="log" width="100%" height="100%"/>
+			</s:Panel>
 	    </s:VGroup>
 	</s:Group>
 </s:WindowedApplication>
