--- a/dogerty-flash-debug-app/src/dogerty/app/components/DisplayTreeItemRenderer.mxml
+++ b/dogerty-flash-debug-app/src/dogerty/app/components/DisplayTreeItemRenderer.mxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:MXTreeItemRenderer xmlns:fx="http://ns.adobe.com/mxml/2009" 
 					  xmlns:s="library://ns.adobe.com/flex/spark" 
-					  xmlns:mx="library://ns.adobe.com/flex/mx">
-	
+					  xmlns:mx="library://ns.adobe.com/flex/mx" 
+					  autoDrawBackground="false">
 	<s:states>
 		<s:State name="normal" />            
 		<s:State name="hovered" />
@@ -17,6 +17,9 @@
 		<s:Group id="disclosureGroup">
 			<s:BitmapImage source="{treeListData.disclosureIcon}" visible="{treeListData.hasChildren}" />
 		</s:Group>
-		<s:RichText id="labelField" paddingTop="2" text="{treeListData.label}"/>
+		<s:RichText id="labelField" paddingTop="2">
+			<s:content><s:span>{treeListData.label}</s:span>:<s:span color.normal="#bbbbbb">{treeListData.item.@type.toString()}</s:span>
+			</s:content>
+		</s:RichText>
 	</s:HGroup>
 </s:MXTreeItemRenderer>
