--- a/dogerty-flash-debug-flex-playground/src/Main.mxml
+++ b/dogerty-flash-debug-flex-playground/src/Main.mxml
@@ -13,7 +13,7 @@
 			}
 		]]>
 	</fx:Script>
-	<s:VGroup width="100%" height="100%">
+	<s:VGroup width="100%" height="100%" paddingTop="10" paddingLeft="10" paddingRight="10" paddingBottom="10">
 		<s:RichText fontSize="16" text="Dogerty Flash Debugger Flex Playground"/>
 		<s:Panel width="100%" height="100%">
 		</s:Panel>
